<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="249dp"
        app:srcCompat="@drawable/arnold_01" />

    <Button
        android:id="@+id/training_starten_button"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/training_starten" />

    <Button
        android:id="@+id/geraet_bearbeiten_button"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/gerät_bearbeiten" />

    <Button
        android:id="@+id/auswertung_button"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/auswertung_der_trainings_einheiten" />

    <Button
        android:id="@+id/trainingsziele_erstellen_button"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/trainings_ziel" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="testUser"
        android:text="Test: User" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/projekt_team"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.DropDownItem"
            android:textColor="?android:attr/colorForeground"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


</LinearLayout>